VQ-3834:Ability to Enable Editing of Benefit Values and Premium Updates for a Given Cover Type

--- a/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.css
+++ b/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.css
@@ -144,3 +144,12 @@
     overflow-y: auto;
     padding-right: 10px; /* Add some padding for a better scrollbar view */
   }
+  .error-border {
+    border: 1px solid red !important;
+  }
+ 
+  #icon i {
+    color: #00529B;
+  }
+  
+  
