--- a/src/app/features/entities/components/client/new-client/new-client.component.css
+++ b/src/app/features/entities/components/client/new-client/new-client.component.css
@@ -30,3 +30,119 @@
   margin-right: 10px;
   cursor: pointer;
 }
+
+
+::ng-deep .p-dropdown {
+  height: 53%;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.20);
+  border-radius: 6px;
+  display: flex;
+  align-items: center; /* Ensures vertical centering */
+}
+
+::ng-deep .p-dropdown .p-dropdown-label.p-placeholder {
+  padding: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 0.75rem;
+  font-size: 16px; /* Increased text size */
+}
+
+::ng-deep .p-dropdown .p-dropdown-label {
+  padding: 8px 12px; /* Adjusted padding */
+  font-size: 18px; /* Increased text size */
+  color: #000;
+  display: flex;
+  align-items: center; /* Centers text vertically */
+  justify-content: flex-start; /* Aligns text to the left */
+  height: 100%; /* Ensures full height usage */
+}
+
+::ng-deep .p-dropdown-filter {
+  width: 100%;
+  height: 35px;
+  border-radius: 4px;
+  padding-right: 30px !important;
+}
+
+::ng-deep .p-dropdown-panel .p-dropdown-header .p-dropdown-filter-container .p-dropdown-filter-icon {
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  transform: translateY(-45)
+}
+
+::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+  font-size: 17px;
+  color: #000;
+  padding: 4px 20px;
+  font-family: 'Roboto', serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.custom-width-20 {
+  width: 18%;
+  /* padding-right: 10px; */
+}
+
+::ng-deep .ngx-intl-tel-input {
+  width: 100%;
+  display: block;
+}
+
+::ng-deep .iti {
+  width: 100%;
+  display: block;
+}
+
+::ng-deep ngx-intl-tel-input .iti--container {
+  width: 100%;
+}
+
+::ng-deep ngx-intl-tel-input input {
+  width: 100%;
+  height: 35px;
+  border: 1px solid rgba(0, 0, 0, 0.20);
+  border-radius: 4px;
+  padding: 3px;
+  font-size: 14px;
+  color: #000;
+}
+
+/* Style for the country dropdown button */
+::ng-deep .iti__flag-container {
+  height: 35px;
+  border-right: 1px solid rgba(0, 0, 0, 0.20);
+}
+
+/* Ensure the input takes full width minus the country selector */
+::ng-deep .iti--separate-dial-code input {
+  padding-left: 85px !important;
+}
+
+/* Match invalid state with other inputs */
+::ng-deep ngx-intl-tel-input.is-invalid input {
+  border-color: #dc3545;
+}
+
+/* Style for the dropdown when it's open */
+::ng-deep .iti__country-list {
+  border-radius: 4px;
+  font-size: 14px;
+  font-family: Roboto;
+}
+
+/* Style for the dropdown items */
+::ng-deep .iti__country {
+  padding: 3px 20px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
