--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
@@ -1,80 +1,102 @@
 .title{
-    color: #000;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 18px; 
+  color: #000;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 18px;
 }
 .title1{
-    color: #000;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 .required{
-    color:red
+  color:red
 }
 .more{
-color: #00529B;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-text-decoration-line: underline;
+  color: #00529B;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-decoration-line: underline;
 }
 .quote-label{
-color: #000;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+  color: #000;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 .quote-btn{
-    padding-left: 16px;
-    padding-right: 13px;
-    white-space: nowrap;
+  padding-left: 16px;
+  padding-right: 13px;
+  white-space: nowrap;
 }
 
 ::ng-deep .p-calendar{
-    height: 30px;
-    width: 350px;
-    border-radius: 4px;
-    
-  }
+  height: 53%;
+  width: 100%;
+  border-radius: 4px;
+}
 
 ::ng-deep .p-dropdown{
-    height: 53%;
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.20);
-    border-radius: 4px;
+  height: 53%;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.20);
+  border-radius: 4px;
 }
 ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
-padding:3px;
-
-
+  padding:3px;
 }
 
 ::ng-deep
 .p-dropdown .p-dropdown-label {
-    padding: 3px;
+  padding: 3px;
 }
 
 ::ng-deep
 .p-dropdown-filter {
-    width: 100%;
-    height: 30px;
-    border-radius: 4px;
+  width: 100%;
+  height: 53%;
+  border-radius: 4px;
 }
 #quote-input{
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.20);
-    /* height: 50%; */
-    font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.20);
+  /* height: 50%; */
+  font-size: 14px;
 }
 
 .form-select {
-    height: 49%;
+  height: 49%;
 
+}
+
+.collapse {
+  transition: all 1s ease;
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+}
+
+.collapse.show {
+  max-height: 2000px; /* Adjust this value based on your content height */
+  opacity: 1;
+}
+
+/* Optional: Add smooth transition for the arrow icons */
+.pi {
+  transition: transform 1s ease;
+}
+
+.pi-angle-double-up {
+  transform: rotate(180deg);
+}
+
+.pi-angle-double-down {
+  transform: rotate(0deg);
 }
