--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -114,7 +114,7 @@
                   <p class="label">Proposer</p>
                 </div>
                 <div class="col-8">
-                  <p class="content">{{quotationDetails?.introducerCode || "null"}}</p>
+                  <p class="content">{{quotationDetails?.introducerCode || "no information available"}}</p>
                 </div>
               </div>
             </div>
@@ -124,7 +124,7 @@
                   <p class="label">Introducer</p>
                 </div>
                 <div class="col-8">
-                  <p class="content">{{quotationDetails?.introducerCode || "null" }}</p>
+                  <p class="content">{{quotationDetails?.introducerCode || "no information available" }}</p>
                 </div>
               </div>
             </div>
@@ -147,7 +147,7 @@
                   <p class="label">Status</p>
                 </div>
                 <div class="col-8">
-                  <p class="content">{{quotationView?.status || "null" }}</p>
+                  <p class="content">{{quotationView?.status || "no information available" }}</p>
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@
                   <p class="label">Source</p>
                 </div>
                 <div class="col-8">
-                  <p class="content">{{quotationView?.source?.description || "null" }}</p>
+                  <p class="content">{{quotationView?.source?.description || "no information available" }}</p>
                 </div>
               </div>
             </div>
@@ -192,7 +192,7 @@
                   <p class="label ">Comm amt.</p>
                 </div>
                 <div class="col-8">
-                  <p class="content" appCommaFormat>{{ marketerCommissionAmount || "null" }}</p>
+                  <p class="content" appCommaFormat>{{ marketerCommissionAmount || "no information available" }}</p>
                 </div>
               </div>
             </div>
@@ -206,7 +206,7 @@
                   <p class="label">Internal Comments</p>
                 </div>
                 <div class="col-7">
-                  <p class="content">{{quotationDetails?.internalComments || "null" }}</p>
+                  <p class="content">{{quotationDetails?.internalComments || "no information available" }}</p>
                 </div>
               </div>
             </div>
@@ -216,7 +216,7 @@
                   <p class="label">External Comments</p>
                 </div>
                 <div class="col-8">
-                  <p class="content">{{quotationDetails?.comments || "null" }}</p>
+                  <p class="content">{{quotationDetails?.comments || "no information available" }}</p>
                 </div>
               </div>
             </div>
@@ -272,6 +272,7 @@
                   <th>Cover From</th>
                   <th>Cover To</th>
                   <th>Binder</th>
+                  <th class="text-end">Sum Insured</th>
                   <th class="text-end">Commission</th>
                   <th class="text-end">Premium</th>
                 </tr>
@@ -282,9 +283,10 @@
                   <td>{{data.productName}}</td>
                   <td>{{data.wef}}</td>
                   <td>{{data.wet}}</td>
-                  <td>{{data.binder || "null" }}</td>
+                  <td>{{data.binder || "-" }}</td>
+                  <td appCommaFormat class="text-end">{{data.totalSumInsured || 0.00}}</td>
                   <td appCommaFormat class="text-end">{{data.commission || 0.00}}</td>
-                  <td appCommaFormat class="text-end">{{data.premium}}</td>
+                  <td appCommaFormat class="text-end">{{data.premium || 0.00}}</td>
                 </tr>
               </ng-template>
             </p-table>
@@ -451,7 +453,7 @@
                       <td>{{data.client}}</td>
                       <td>{{data.quotCoverFrom}}</td>
                       <td>{{data.quotCoverTo}}</td>
-                      <td>{{data.branchName || "null"}}</td>
+                      <td>{{data.branchName || "-"}}</td>
                       <td>{{data.agentName}}</td>
                       <td>{{data.productDesc}}</td>
                     </tr>
@@ -515,6 +517,7 @@
                   <th>ID</th>
                   <th>Description</th>
                   <th>Cover Type</th>
+                  <th>Subclass</th>
                   <th class="text-end">SI</th>
                   <th class="text-end">Premium</th>
                 </tr>
@@ -525,6 +528,7 @@
                   <td>{{data?.quotationRiskNo || '-'}}</td>
                   <td>{{data?.propertyId || '-'}}</td>
                   <td>{{data?.coverTypeShortDescription || '-'}}</td>
+                  <td>{{data?.subclass?.sclDescription || '-'}}</td>
                   <td appCommaFormat class="text-end">{{data?.sectionsDetails[0]?.limitAmount || 0 }}</td>
                   <td appCommaFormat class="text-end">{{data?.sectionsDetails[0]?.premium || 0 }}</td>
                 </tr>
@@ -724,21 +728,30 @@
             <p-table [value]="externalTable" [tableStyle]="{ 'min-width': '50rem' }">
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Client</th>
+                  <!-- <th>Client</th> -->
                   <th>Insurer</th>
                   <th>Policy Number</th>
                   <th>Year</th>
+                  <th>Risk Details</th>
+                  <th class="text-end">Damage Amount</th>
+                  <th class="text-end">Third-Party Amount</th>
+                  <th class="text-end">Other Amount</th>
                   <th class="text-end">Claim Paid</th>
+
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-externalClaim>
                 <tr [class.p-highlight]="externalClaim === selectedExternalClaimExp"
                   (click)="onExternalClaimSelect(externalClaim)" style="cursor: default">
-                  <td>{{ clientDetails?.firstName+" "+clientDetails?.lastName }}</td>
+                  <!-- <td>{{ clientDetails?.firstName+" "+clientDetails?.lastName }}</td> -->
                   <td>{{externalClaim.insurer}}</td>
                   <td>{{externalClaim.policyNumber}}</td>
                   <td>{{externalClaim.eceYear}}</td>
-                  <td class="text-end">{{externalClaim.claimPaid}}</td>
+                  <td>{{externalClaim.riskDetails}}</td>
+                  <td appCommaFormat class="text-end">{{externalClaim.damageAmount}}</td>
+                  <td appCommaFormat class="text-end">{{externalClaim.tpAmount}}</td>
+                  <td appCommaFormat class="text-end">{{externalClaim.otherAmount}}</td>
+                  <td appCommaFormat class="text-end">{{externalClaim.claimPaid}}</td>
                 </tr>
               </ng-template>
               <ng-template pTemplate="emptymessage">
@@ -865,12 +878,23 @@
                 <div class="mb-3 d-flex align-items-center">
                   <label for="eceYear" class="form-label external-claim-label col-3 mb-0 pe-2">Year</label>
                   <div class="col-8 ps-0">
-                    <input type="number" class="form-control external-claim-input" id="eceYear" placeholder=""
-                      formControlName="eceYear">
-                    <div
-                      *ngIf="insurersDetailsForm.get('eceYear').hasError('required') && insurersDetailsForm.get('eceYear').touched"
-                      class="form-text text-danger">
-                      Year is required
+                    <input type="number"
+                      class="form-control external-claim-input"
+                      id="eceYear"
+                      placeholder="YYYY"
+                      formControlName="eceYear"
+                      [min]="1900"
+                      [max]="acceptedYear">
+                    <div *ngIf="insurersDetailsForm.get('eceYear').touched" class="form-text text-danger">
+                      <div *ngIf="insurersDetailsForm.get('eceYear').hasError('required')">
+                        Year is required
+                      </div>
+                      <div *ngIf="insurersDetailsForm.get('eceYear').hasError('max')">
+                        Year cannot be past {{  acceptedYear }}
+                      </div>
+                      <div *ngIf="insurersDetailsForm.get('eceYear').hasError('pattern') && insurersDetailsForm.get('eceYear').hasError('min')">
+                        Please enter a valid year
+                      </div>
                     </div>
                   </div>
                 </div>
