worked on VQ-3829 AND VQ-3828

--- a/src/app/features/fms/components/client-allocation/client-allocation.component.html
+++ b/src/app/features/fms/components/client-allocation/client-allocation.component.html
@@ -235,7 +235,10 @@
 
     <!-- Upload Button and Hidden File Input -->
     <form [formGroup]="receiptingDetailsForm">
-      <div class="row mt-3" *ngIf="isAllocationComplete">
+      <div
+        class="row mt-3"
+        *ngIf="canShowUploadFileBtn && getAllocation.length > 0"
+      >
         <div class="col-md-4">
           <!-- Upload Button -->
           <input
